<resources>
    <string name="app_name">We Shop E-Commerce</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkout">Checkout</string>


    <string name="colour">Choose Colour</string>
    <string name="spaceGray">Space Gray</string>
    <string name="secondColour">Silver</string>
    <string name="thirdColour">Gold</string>

    <string name="sportsFirstColour">Honey Yellow</string>
    <string name="sportsSecondColour">Graphite Gray</string>
    <string name="sportsThirdColour">Midnight Black</string>
    <string name="sportsFourthColour">Orange</string>

    <string name="bloodOrange">Blood Orange</string>
    <string name="black">Black</string>
    <string name="skyBlue">Sky Blue</string>
    <string name="white">White</string>
    <string name="darkYellow">Dark Yellow</string>
    <string name="salmon">Salmon Pink</string>

    <string name="limeGreen">Lime Green</string>
    <string name="rubyRed">Ruby Red</string>

    <string name="blue">Dark Blue</string>
    <string name="red">Dark Red</string>

    <string name="main_title">"We Shop Contact Us Form"</string>
    <string name="main_submit_complaint">"Submit Complaint"</string>
    <string name="main_check_complaints">"Check Complaints"</string>
    <string name="ok">OK</string>
    <string name="login_below">Login Below</string>
    <string name="register_below">Register Below</string>
    <string name="we_shop_e_commerce">We Shop E-Commerce</string>
    <string name="login">Login</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_username">Enter Username</string>
    <string name="register">Register</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="sports_and_outdoors">Sports And Outdoors</string>
    <string name="tech">Tech</string>
    <string name="clothing">Clothing</string>
    <string name="diy">DIY</string>
    <string name="orderConfirmation">Order Confirmation</string>
    <string name="orderConfirmed">Your order has been confirmed.</string>
    <string name="view_profile">View Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_name_">Profile Name: </string>
    <string name="sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_image">Item image</string>
    <string name="_69">$ 69</string>
    <string name="_69_">$ 69 x 1</string>
    <string name="wallet">Wallet</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_today">Don\'t have an account? Register today!</string>
    <string name="view_cart">View Cart</string>
    <string name="no_items_added">No items added</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="categories">Categories</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="view_item">View Item</string>
    <string name="shirt">Shirt</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total_cost">Total Cost:</string>
    <string name="place_order">Place Order</string>
    <string name="this_is_a_shirt">This is a Shirt</string>
    <string name="_138">$ 138</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="content_product_description"><![CDATA[<-- Content/Product Description -->]]></string>
    <string name="Sign_out">Sign Out</string>
    <string name="email">Email</string>

    <string-array name="Diy_products">
        <item>Paint</item>
        <item>Paint Brush</item>
        <item>Wallpaper</item>
        <item>Sealant</item>
    </string-array>

    <string-array name="Diy_price">
        <item>25</item>
        <item>5</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <string-array name="Clothing_products">
        <item>Adidas Jacket Women\'s</item>
        <item>Long Sleeve Top Women\'s</item>
        <item>Long Sleeve Checkered Shirt</item>
        <item>Jeans</item>
        <item>Women\'s Hoodie</item>
    </string-array>

    <string-array name="Clothing_price">
        <item>25</item>
        <item>5</item>
        <item>10</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="Sports_products">
        <item>Air Jordan</item>
        <item>Gray Shoes</item>
        <item>Nike max</item>
        <item>Adidas Predator Women\'s Boots</item>
    </string-array>

    <string-array name="Sports_price">
        <item>25</item>
        <item>5</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <string-array name="Tech_products">
        <item>Airpods Pro</item>
        <item>Apple Watch</item>
        <item>Samsung Galaxy S10</item>
        <item>iPhone X</item>
    </string-array>

    <string-array name="Tech_price">
        <item>150</item>
        <item>400</item>
        <item>800</item>
        <item>999</item>
    </string-array>

</resources>