<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewItem"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Ecomapplication">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_view_item"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/view_item_img"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/clothingshirt"
        android:padding="16dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/view_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shirt"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textSize="32sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/view_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_69"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:text="@string/add_to_cart"
        android:background="@color/black"/>

</LinearLayout>